P42023T03-105: Implement Game - Automatic moves